--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <a href="https://www.jackgethome.com/">Hao Bai</a><sup>1,2*</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://yifeizhou02.github.io">Yifei Zhou</a><sup>1*</sup>,
+                                <a href="https://yifeizhou02.github.io">Yifei Zhou</a><sup>1,6*</sup>,
                             </span>
                             <br>
                             <span class="author-block">
@@ -85,7 +85,7 @@
                                 <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a><sup>1</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a><sup>4,5</sup>
+                                <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a><sup>4</sup>
                             </span>
                         </div>
 
@@ -94,7 +94,7 @@
                             <span class="author-block"><sup>2</sup> UIUC,</span>
                             <span class="author-block"><sup>3</sup> Amazon,</span>
                             <span class="author-block"><sup>4</sup> CMU,</span>
-                            <span class="author-block"><sup>5</sup> Google DeepMind</span>
+                            <span class="author-block"><sup>6</sup> FAIR</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
