edit image size

--- a/index.html
+++ b/index.html
@@ -218,8 +218,9 @@ improvement over prior best-performing method.
                             <li><b>Value-based methods</b> learn an off-policy Q function from historically collected data to score a policy's actions reliably. In this way, we can significanly simplify our recipe for <b>policy improvement without costly simulations.</b> </li>
                         </ul>
                     </div>
-
-                    <img src="website/images/teaser.png"/>
+                    <div style="text-align: center;">
+                        <img src="website/images/teaser.png" width="1000"/> 
+                    </div>
                     <!-- <div class="text-center">
                         <div class="btn-group btn-group-toggle text-center task-selector" data-toggle="buttons">
                             <button type="button" class="btn btn-outline-secondary btn-sm inline-vis-button" disabled
@@ -244,7 +245,9 @@ improvement over prior best-performing method.
                             <li>Once the Q function is trained, a <b>Best-of-N policy-extraction objective</b> is applied to train the agentic policy to imitate the best-rated action per the Q-function without any additional environment interactions. </li>
                         </ul>
                     </div>
-                    <img src="website/images/method.png"/>
+                    <div style="text-align: center;">
+                        <img src="website/images/method.png" width="1000" />
+                    </div>
                 </div>
                 <!--/ Visual Effects. -->
             </div>
