--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 </span>
                                 <!-- Code Link. -->
                                 <span class="link-block">
-                                    <a href="https://github.com/DigiRL-agent/digirl" class="btn btn-outline-dark"
+                                    <a href="https://github.com/DigiRL-agent/digiq" class="btn btn-outline-dark"
                                         role="button">&#128187;
                                         Code</a> &nbsp;&nbsp;
 
