--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <span class="author-block"><sup>1</sup> UC Berkeley,</span>
                             <span class="author-block"><sup>2</sup> UIUC,</span>
                             <span class="author-block"><sup>3</sup> Amazon,</span>
-                            <span class="author-block"><sup>4</sup> CMU,</span>
+                            <span class="author-block"><sup>4</sup> CMU</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
