--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <source src="website/videos/animation_policy_based.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <small>Success rate and corresponding trajectories. A <font color="#007800">green</font> final screen indicates a successful trajectory; a <font color="#ff1900">red</font> final screen indicates a failed trajectory.</s>
+                    <small>Method overview of Digi-Q compared to policy-based methods. Click on the button to switch the method.</small>
                 </div>
             </div>
         </div>
