--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <div class="btn-group btn-group-toggle text-center task-selector" data-toggle="buttons">
                                 <button type="button" class="btn btn-outline-secondary btn-sm inline-vis-button" disabled>RL Algorithm:</button>
                                 <button type="button" class="btn btn-outline-secondary btn-sm active" id="fast-button">Digi-Q</button>
-                                <button type="button" class="btn btn-outline-secondary btn-sm" id="slow-button">Other Policy-based Methods</button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm" id="slow-button">Policy-based Methods</button>
                             </div>
                         </div>
                     </div>
