--- a/index.html
+++ b/index.html
@@ -372,15 +372,15 @@ improvement over prior best-performing method.
             <div class="has-text-centered">
                 <div class="custom-column-large">
                     <h2 class="title is-3">Trajectory Visualizer</h2>
-                    <div class="columns">
+                    <div class="columns is-variable is-1">
                         <div class="column">
-                            <video controls autoplay muted loop>
+                            <video controls autoplay muted loop style="width:40%;">
                                 <source src="website/videos/general1.mp4" type="video/mp4">
                             </video>
                             <small class="has-text-centered">Task: search for some good Italian restaurants (AitW General)</small>
                         </div>
                         <div class="column">
-                            <video controls autoplay muted loop>
+                            <video controls autoplay muted loop style="width:40%;">
                                 <source src="website/videos/webshop1.mp4" type="video/mp4">
                             </video>
                             <small class="has-text-centered">Task: go to ebay.com, search for duracell a, and select the first item</small>
@@ -390,10 +390,6 @@ improvement over prior best-performing method.
             </div>
         </div>
     </section>
-
-
-    
-
 
     <section class="section" id="evaluation">
         <div class="container is-max-desktop">
