--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ improvement over prior best-performing method.
         <div class="container is-max-desktop">
             <div class="has-text-centered">
                 <div class="custom-column-large">
-                    <h2 class="title is-3">Trajectory Visualizer</h2>
+                    <h2 class="title is-3">Example Policy Rollouts</h2>
                     <div class="columns is-variable is-1">
                         <div class="column">
                             <video controls autoplay muted loop style="width:40%;">
