--- a/index.html
+++ b/index.html
@@ -366,30 +366,33 @@ improvement over prior best-performing method.
             </div>
         </div>
     </section>
-
-    <section class="section" id="trajectory">
+    
+    <section class="section" id="example-policy-rollouts">
         <div class="container is-max-desktop">
             <div class="has-text-centered">
                 <div class="custom-column-large">
                     <h2 class="title is-3">Example Policy Rollouts</h2>
-                    <div class="columns is-variable is-1">
-                        <div class="column">
-                            <video controls autoplay muted loop style="width:40%;">
+                    <div class="columns is-vcentered is-variable is-2" style="justify-content: center;">
+                        <div class="column is-narrow has-text-centered">
+                            <video controls autoplay muted loop style="width:50%;">
                                 <source src="website/videos/general1.mp4" type="video/mp4">
                             </video>
-                            <small class="has-text-centered">Task: search for some good Italian restaurants (AitW General)</small>
+                            <br>
+                            <small>Task: search for some good Italian restaurants (AitW General)</small>
                         </div>
-                        <div class="column">
-                            <video controls autoplay muted loop style="width:40%;">
+                        <div class="column is-narrow has-text-centered">
+                            <video controls autoplay muted loop style="width:50%;">
                                 <source src="website/videos/webshop1.mp4" type="video/mp4">
                             </video>
-                            <small class="has-text-centered">Task: go to ebay.com, search for duracell a, and select the first item</small>
+                            <br>
+                            <small>Task: go to ebay.com, search for duracell a, and select the first item</small>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <section class="section" id="evaluation">
         <div class="container is-max-desktop">
