--- a/index.html
+++ b/index.html
@@ -372,16 +372,16 @@ improvement over prior best-performing method.
             <div class="has-text-centered">
                 <div class="custom-column-large">
                     <h2 class="title is-3">Example Policy Rollouts</h2>
-                    <div class="columns is-vcentered is-variable is-2" style="justify-content: center;">
+                    <div class="columns is-gapless is-mobile is-vcentered" style="justify-content: center;">
                         <div class="column is-narrow has-text-centered">
-                            <video controls autoplay muted loop style="width:50%;">
+                            <video controls autoplay muted loop style="width:20%;">
                                 <source src="website/videos/general1.mp4" type="video/mp4">
                             </video>
                             <br>
                             <small>Task: search for some good Italian restaurants (AitW General)</small>
                         </div>
-                        <div class="column is-narrow has-text-centered">
-                            <video controls autoplay muted loop style="width:50%;">
+                        <div class="column is-narrow has-text-centered" style="margin-left: 1rem;">
+                            <video controls autoplay muted loop style="width:20%;">
                                 <source src="website/videos/webshop1.mp4" type="video/mp4">
                             </video>
                             <br>
@@ -392,6 +392,7 @@ improvement over prior best-performing method.
             </div>
         </div>
     </section>
+
 
 
     <section class="section" id="evaluation">
