--- a/index.html
+++ b/index.html
@@ -368,30 +368,27 @@ improvement over prior best-performing method.
     </section>
     
     <section class="section" id="example-policy-rollouts">
-        <div class="container is-max-desktop">
-            <div class="has-text-centered">
-                <div class="custom-column-large">
-                    <h2 class="title is-3">Example Policy Rollouts</h2>
-                    <div class="columns is-gapless is-mobile is-vcentered" style="justify-content: center;">
-                        <div class="column is-narrow has-text-centered">
-                            <video controls autoplay muted loop style="width:20%;">
-                                <source src="website/videos/general1.mp4" type="video/mp4">
-                            </video>
-                            <br>
-                            <small>Task: search for some good Italian restaurants (AitW General)</small>
-                        </div>
-                        <div class="column is-narrow has-text-centered" style="margin-left: 1rem;">
-                            <video controls autoplay muted loop style="width:20%;">
-                                <source src="website/videos/webshop1.mp4" type="video/mp4">
-                            </video>
-                            <br>
-                            <small>Task: go to ebay.com, search for duracell a, and select the first item</small>
-                        </div>
-                    </div>
-                </div>
+        <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
+            <!-- First video and caption -->
+            <div style="text-align: center;">
+                <video controls autoplay muted loop style="width: 15%;">
+                    <source src="website/videos/general1.mp4" type="video/mp4">
+                </video>
+                <br>
+                <small>Task: search for some good Italian restaurants (AitW General)</small>
+            </div>
+            
+            <!-- Second video and caption -->
+            <div style="text-align: center;">
+                <video controls autoplay muted loop style="width: 15%;">
+                    <source src="website/videos/webshop1.mp4" type="video/mp4">
+                </video>
+                <br>
+                <small>Task: go to ebay.com, search for duracell a, and select the first item</small>
             </div>
         </div>
     </section>
+
 
 
 
