--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@ improvement over prior best-performing method.
     </section>
     
     <section class="section" id="example-policy-rollouts">
-        <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 1px;">
             <!-- First video and caption -->
             <div style="text-align: center;">
-                <video controls autoplay muted loop style="width: 15%;">
+                <video controls autoplay muted style="width: 20%;">
                     <source src="website/videos/general1.mp4" type="video/mp4">
                 </video>
                 <br>
@@ -380,7 +380,7 @@ improvement over prior best-performing method.
             
             <!-- Second video and caption -->
             <div style="text-align: center;">
-                <video controls autoplay muted loop style="width: 15%;">
+                <video controls autoplay muted style="width: 20%;">
                     <source src="website/videos/webshop1.mp4" type="video/mp4">
                 </video>
                 <br>
