--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ improvement over prior best-performing method.
     </section>
     
     <section class="section" id="example-policy-rollouts">
-        <div style="display: flex; justify-content: center; align-items: center; gap: 1px;">
+        <div style="display: flex; justify-content: center; align-items: center">
             <!-- First video and caption -->
             <div style="text-align: center;">
                 <video controls autoplay muted style="width: 20%;">
