--- a/index.html
+++ b/index.html
@@ -368,31 +368,24 @@ improvement over prior best-performing method.
     </section>
     
     <section class="section" id="example-policy-rollouts">
-        <div style="display: flex; justify-content: center; align-items: center; gap: 0;">
-            <!-- First video + text -->
-            <div style="width: 15%; text-align: center;">
-                <video controls autoplay muted loop style="width: 100%;">
-                    <source src="website/videos/general1.mp4" type="video/mp4">
-                </video>
-                <small style="display: block;">
-                    Task: search for some good Italian restaurants (AitW General)
-                </small>
-            </div>
-    
-            <!-- Second video + text -->
-            <div style="width: 15%; text-align: center;">
-                <video controls autoplay muted loop style="width: 100%;">
-                    <source src="website/videos/webshop1.mp4" type="video/mp4">
-                </video>
-                <small style="display: block;">
-                    Task: go to ebay.com, search for duracell a, and select the first item
-                </small>
-            </div>
+      <h2 class="title is-3">Example Policy Rollouts</h2>
+      <div id="videos">
+        <!-- First video + caption -->
+        <div class="video-block">
+          <video controls autoplay muted loop>
+            <source src="website/videos/general1.mp4" type="video/mp4">
+          </video>
+          <small>Task: search for some good Italian restaurants (AitW General)</small>
         </div>
+        <!-- Second video + caption -->
+        <div class="video-block">
+          <video controls autoplay muted loop>
+            <source src="website/videos/webshop1.mp4" type="video/mp4">
+          </video>
+          <small>Task: go to ebay.com, search for duracell a, and select the first item</small>
+        </div>
+      </div>
     </section>
-
-
-
 
 
     <section class="section" id="evaluation">
