--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ improvement over prior best-performing method.
         <div class="container is-max-desktop">
             <div class="has-text-centered">
                 <div class="custom-column-large">
-                    <h2 class="title is-3">Trajectory Visualizer</h2>
+                    <h2 class="title is-3">Example Policy Rollouts</h2>
                     <div class="text-center">
                         <div class="btn-group btn-group-toggle text-center" data-toggle="buttons">
                             <button type="button" class="btn btn-outline-secondary btn-sm active" id="webshop-button">Webshop</button>
