--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ improvement over prior best-performing method.
                         <h3> Why do we need to train an off-policy Q function for device-control agents? </h3>
                         <ul class="custom-bullets">
                             <li>While <b>policy-based methods</b> such as <a href="https://arxiv.org/abs/1707.06347">PPO</a> and <a href="https://arxiv.org/abs/2406.11896">DigiRL</a> 
-                                can achieve strong performances through sampling a large amount of on-policy data, they may be impractical for real-world device-control tasks where <b>simulation is slow and restricted due to privacy concerns</b>. </li>
-                            <li><b>Value-based methods</b> learn an off-policy Q function from historically collected data to score a policy's actions reliably. In this way, we can significanly simplify our recipe for <b>policy improvement without costly simulations.</b> </li>
+                                can achieve strong performances through sampling a large amount of on-policy data, they may be impractical for real-world device-control tasks where <b>simulation is slow and restricted due to safety concerns</b>. </li>
+                            <li><b>Value-based methods</b> learn an off-policy Q function from historically collected data to score a policy's actions reliably. In this way, we can significantly simplify our recipe for <b>policy improvement without costly simulations.</b> </li>
                         </ul>
                     </div>
                     <div style="text-align: center;">
