--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="publication-links">
                                 <!-- PDF Link. -->
                                 <span class="link-block">
-                                    <a href="./website/data/digiq.pdf" class="btn btn-outline-dark"
+                                    <a href="https://arxiv.org/abs/2502.15760" class="btn btn-outline-dark"
                                         role="button">&#128221;
                                         Paper</a> &nbsp;&nbsp;
 
